GET /messages/search/:groupId
